force-app/main/default/objects/LetterStream_Piece__c/LetterStream_Piece__c.object-meta.xml
<CustomObject>
    <label>LetterStream Piece</label>
    <nameField>
        
        <label>LetterStream Piece Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>LetterStream Pieces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>