force-app/main/default/objects/LetterStream_Piece__c/fields/LetterStream_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>LetterStream_Job_Id__c</fullName>
    <label>LetterStream Job Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>