force-app/main/default/objects/LetterStream_Piece__c/fields/LetterStreamJob__c.field-meta.xml
<CustomField>
    <fullName>LetterStreamJob__c</fullName>
    <label>LetterStreamJob</label>
    <referenceTo>LetterStreamJob__c</referenceTo>
    <relationshipLabel>LetterStream Pieces</relationshipLabel>
    <relationshipName>LetterStream_Pieces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>