force-app/main/default/objects/LetterStream_Piece__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <inlineHelpText>This is ID of the object with the attached file that was sent to LetterStream.</inlineHelpText>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>