force-app/main/default/objects/LetterStream_Piece__c/fields/Piece_Cost__c.field-meta.xml
<CustomField>
    <fullName>Piece_Cost__c</fullName>
    <label>Piece Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>